# LocalDataBase

./: .clang-format  MERTEH.pro  commandargs.h  database.cpp  database.h  databasecolumn.cpp  databasecolumn.h  databasename.cpp  databasequerry.cpp  databasequerry.h  main.cpp
soft/: CMakeLists.txt  commandargs.cpp  commandargs.h  database.cpp  database.h  databasecolumn.cpp  databasecolumn.h  databasemanager.cpp  databasemanager.h  databasename.h  databasequerry.cpp  databasequerry.h  databasetuple.cpp  databasetuple.h  main.cpp
soft/commands/: CMakeLists.txt  command.h  commandadd.cpp  commandadd.h  commanddelete.cpp  commanddelete.h  commanddone.cpp  commanddone.h  commandhelp.cpp  commandhelp.h  commandselect.cpp  commandselect.h  commandupdate.cpp  commandupdate.h  selectargs.cpp  selectargs.h
tests/: CMakeLists.txt  common.cpp  common.h  testablecommandselect.cpp  testablecommandselect.h  testcommandadd.cpp  testcommanddelete.cpp  testcommanddone.cpp  testcommandselect.cpp  testcommandupdate.cpp
